2012-02-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, version.mk: Fix a compile error when debug
	  is enabled. Thanks to Maurizio Camisaschi and Lars Wendler.
	  See https://bugs.gentoo.org/400769
	* Makefile: Enable debugging info for gdb when DEBUG=1
	* man page: Small update in section RETURN VALUE.

2012-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.2

2012-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* os2.mak: Enable support for wild cards (-Zargs-wild).
	  Thanks to Steven H. Levine and Elbert Pol.

2011-12-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Extra comment from Rugxulo.
	* querycp.c: Undid change of 2011-11-12. MSYS version
	  behaves as Cygwin version.

2011-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* wccdos32.mak: New makefile for Open Watcom for DOS32.

2011-12-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Undo previous change for Darwin. Not restoring group and
	  owner may be destructive or a security risk.
	* Makefile, common.[ch]: Dos2unix builds on MSYS now.

2011-12-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: For MacOS the option -DNO_CHOWN has been be added to the compile time flags.
	  This is necessary because Darwin will create files with the
	  file-owner-group set to the file-owner-group of the directory - EVEN if
	  the caller is not a member of the group! Chowning *from* the group is ok,
	  chowning *to* the group is not - and this will make unix2dos fail when it
	  tries to restore the permissions.
	  Thanks to Wolf Geldmacher.
	  See bug report 3444337, https://sourceforge.net/tracker/?func=detail&atid=1234808&aid=3444337&group_id=292083

2011-11-16 Erwin Waterlander <waterlan@xs4all.nl>
	* README.txt, man/man1/dos2unix.pod: Freshmeat changed name to Freecode.

2011-11-12 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Fix for MSYS.

2011-10-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Support OS/2, and Watcom C for Win32.