@@ -1,3 +1,8 @@
+2012-03-02 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: New target 'mostlyclean' that preserves the manual
+	  files. Target 'clean' removes all built files, it restores the
+	  Unix source package to its original state.
+
 2012-02-01 Erwin Waterlander <waterlan@xs4all.nl>
 	* Makefile, version.mk: Fix a compile error when debug
 	  is enabled. Thanks to Maurizio Camisaschi and Lars Wendler.
